<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout
		android:id="@+id/trip_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/accent_color"
		android:paddingTop="@dimen/small_padding"
		android:paddingBottom="@dimen/small_padding"
		android:baselineAligned="false">
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="2"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center_horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/zero_time"
				android:textSize="@dimen/menu_font_size"
				android:textColor="@color/accent_text_color"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/elapsed"
				android:textColor="@color/accent_text_color"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center_horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/zero_decimal"
				android:textSize="@dimen/menu_font_size"
				android:textColor="@color/accent_text_color"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/miles"
				android:textColor="@color/accent_text_color"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center_horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/zero_decimal"
				android:textSize="@dimen/menu_font_size"
				android:textColor="@color/accent_text_color"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/mph"
				android:textColor="@color/accent_text_color"/>
		</LinearLayout>
	</LinearLayout>
	
	<fragment
		android:id="@+id/map"
		android:name="com.google.android.gms.maps.SupportMapFragment"
		android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/trip_bar"/>
	
	<RelativeLayout
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center_vertical"
		android:layout_marginBottom="@dimen/standard_padding">
		
		<LinearLayout
	        android:layout_toLeftOf="@+id/mark_button"
	        android:layout_toRightOf="@+id/recording_buttons"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/negative_standard_padding"
	        android:layout_marginRight="@dimen/negative_standard_padding"
	        android:padding="@dimen/standard_padding"
	        android:background="@drawable/accent_border_rectangle"
	        android:orientation="horizontal"
	        android:baselineAligned="false">
			
			<LinearLayout
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/zero_decimal"
					android:textSize="@dimen/menu_font_size"
					android:textColor="@color/accent_color"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/miles"
					android:textColor="@color/accent_color"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/zero_decimal"
					android:textSize="@dimen/menu_font_size"
					android:textColor="@color/accent_color"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/mph"
					android:textColor="@color/accent_color"/>
			</LinearLayout>
		    
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/recording_buttons"
	        android:layout_width="@dimen/recording_buttons"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_alignParentLeft="true"
			android:background="@color/accent_color"
			android:layout_centerVertical="true">
			<ImageButton
				android:id="@+id/start_recording"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:contentDescription="@string/start"
				android:src="@drawable/ic_action_record"/>
			<ImageButton
				android:id="@+id/resume_recording"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:contentDescription="@string/resume"
				android:src="@drawable/ic_action_record"/>
			<ImageButton
				android:id="@+id/pause_recording"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:contentDescription="@string/pause"
				android:src="@drawable/ic_action_pause"/>
			<ImageButton
				android:id="@+id/stop_recording"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:contentDescription="@string/stop"
				android:src="@drawable/ic_action_stop"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/mark_button"
	        android:layout_width="@dimen/recording_buttons"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_alignParentRight="true"
			android:background="@color/accent_color"
			android:layout_centerVertical="true">
			<ImageButton
				android:id="@+id/mark"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:contentDescription="@string/mark"
				android:src="@drawable/ic_action_mark"/>
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>