<?xml version="1.0" encoding="utf-8"?>   
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/BaseContainer">
	<RelativeLayout
	    style="@style/ContentContainer">
	    
        <LinearLayout
            android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/user_info_button"
            android:orientation="vertical"
            android:padding="@dimen/standard_padding">
			
			<TextView
				android:id="@+id/TextView01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="16sp"
				android:text="@string/finished_recording"/>
			
	        <LinearLayout
	            style="@style/user_pref_group">
	            
	            <TextView
	                style="@style/user_prefs_label"
	                android:text="@string/trip_purpose"/>
	            <Spinner
	                android:id="@+id/tripPurposeSpinner"
	                style="@style/user_prefs_spinner"/>
	
	        </LinearLayout>
	        
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/TextPurpDescription"
				android:text="@string/select_trip_purpose"
				android:bufferType="spannable"
				android:textSize="14sp"
				android:lines="4"/>
			
			<!-- 
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/enter_comments"
				android:textSize="16sp"/>
			<EditText
			    android:id="@+id/NotesField"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:imeOptions="actionDone"/>			
				-->
        </LinearLayout>
        
		<LinearLayout
			android:id="@+id/user_info_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_above="@+id/trip_buttons"
			android:orientation="vertical">
           	
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
           	
		    <LinearLayout
		        style="?android:attr/buttonBarStyle"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
	           	<Button
	           	    android:id="@+id/ButtonPrefs"
	           	    style="?android:attr/buttonBarStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/enter_info"
					android:drawableLeft="@drawable/ic_dark_action_person"/>
           	</LinearLayout>
        </LinearLayout>
        
		<LinearLayout
			android:id="@+id/trip_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="vertical">
           	
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
           	
		    <LinearLayout
		        style="?android:attr/buttonBarStyle"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
				    android:id="@+id/ButtonDiscard"
				    style="?android:attr/buttonBarButtonStyle"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:text="@string/discard"
					android:drawableLeft="@drawable/ic_dark_action_remove"/>
				<Button
					android:id="@+id/ButtonSubmit"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:text="@string/submit"
					android:drawableLeft="@drawable/ic_dark_action_save"/>
			</LinearLayout>
		</LinearLayout>
	</RelativeLayout>
</FrameLayout>